plugins {
    id 'java'
    id 'maven-publish'
    id 'com.github.johnrengelman.shadow' version '7.1.2'
}

repositories {
    mavenLocal()
    maven { url = uri('https://hub.spigotmc.org/nexus/content/repositories/snapshots/') }
    maven { url = uri('https://oss.sonatype.org/content/groups/public/') }
    maven { url = uri('https://jitpack.io') }
    maven { url = uri('https://repo.maven.apache.org/maven2/') }
}

dependencies {
    implementation 'com.github.Preponderous-Software:ponder:1.0'
    implementation 'org.spigotmc:spigot-api:1.14.1-R0.1-SNAPSHOT'
    implementation 'org.bstats:bstats-bukkit:3.0.0'
}

group = 'KingdomProgrammers'
version = '3.0.0-SNAPSHOT'
description = 'FoodSpoilage'
java.sourceCompatibility = JavaVersion.VERSION_17

import org.apache.tools.ant.filters.ReplaceTokens
processResources {
    filter ReplaceTokens, tokens: [
            'version': version
    ]
}

shadowJar {
    archiveClassifier.set('')
    mergeServiceFiles()
    dependencies {
        include(dependency('com.github.Preponderous-Software:ponder'))
        include(dependency('org.bstats:bstats-bukkit'))
        include(dependency('org.bstats:bstats-base'))
    }
    relocate 'preponderous.ponder', 'spoilagesystem.shadow.preponderous.ponder'
    relocate 'org.intellij', 'spoilagesystem.shadow.org.intellij'
    relocate 'org.jetbrains', 'spoilagesystem.shadow.org.jetbrains'
    relocate 'org.bstats', 'spoilagesystem.shadow.org.bstats'
}

artifacts {
    archives shadowJar
}

publishing {
    publications {
        maven(MavenPublication) { publication ->
            from(project.shadow.component(publication))
        }
    }
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}
